# hugdocker

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  dockerctl-0.2.0-source.tar.gz.sha256  dockerctl-0.2.1-source.tar.gz.sha256  dockerctl-0.3.0-source.tar.gz.sha256
.github/release-notes/: v0.2.2.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.4.md  v0.5.0.md
.github/workflows/: ci.yml  release.yml  sync-release-notes.yml
assets/: README.md
examples/: config.toml
scripts/: install-cli.sh  install.sh  open-menu.sh  uninstall-cli.sh
scripts/completions/: README.md
src/: audit.rs  bin_main.rs  cli.rs  config.rs  docker.rs  dockerctl.rs  domain.rs  health.rs  inbox.rs  lib.rs  main.rs  ops.rs  output.rs  recipes.rs  resources.rs  telemetry.rs  tui.rs
tests/: cli_behavior.rs  core_behavior.rs  doctor_behavior.rs  inbox_behavior.rs  release_metadata.rs  resources_behavior.rs  tui_render.rs
