[package]
name = "hugdocker"
version = "0.4.2"
edition = "2024"
description = "Fast project-first Docker TUI/CLI for Linux daily operations"
license = "MIT"
readme = "README.md"
repository = "https://github.com/badwichell007/hugdocker"
homepage = "https://github.com/badwichell007/hugdocker"
documentation = "https://github.com/badwichell007/hugdocker#readme"
keywords = ["docker", "tui", "cli", "linux", "ops"]
categories = ["command-line-utilities"]

[[bin]]
name = "hugdocker"
path = "src/main.rs"

[[bin]]
name = "dockerctl"
path = "src/dockerctl.rs"

[dependencies]
bollard = "0.20"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
crossterm = "0.28"
futures-util = "0.3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
